--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
     implementation "com.h2database:h2:$h2_version"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-datetime:$kotlinx_datetime_version"
 }
 
 test {
