--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
-    id 'io.ktor.plugin' version '2.1.3'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.7.22'
+    id 'io.ktor.plugin' version '2.2.1'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.22'
 }
 
 group "com.rezerwacja_stolikow"
@@ -34,7 +34,7 @@ dependencies {
     implementation "org.jetbrains.exposed:exposed-dao:$exposed_version"
     implementation "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
     implementation "com.h2database:h2:$h2_version"
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:$junit_version'
 
     implementation "org.jetbrains.kotlinx:kotlinx-datetime:$kotlinx_datetime_version"
 }
