--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -1,7 +1,8 @@
-ktor_version=2.1.3
-kotlin_version=1.7.21
-logback_version=1.4.4
+ktor_version=2.2.1
+kotlin_version=1.7.22
+logback_version=1.4.5
 kotlin.code.style=official
 exposed_version = 0.40.1
 h2_version = 2.1.214
 kotlinx_datetime_version = 0.4.0
+junit_version = 5.9.0
