📟 fix missing configuration

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -8,9 +8,10 @@ ktor {
     }
 }
 jwt {
-    domain = "https://jwt-provider-domain/"
-    audience = "jwt-audience"
-    realm = "ktor sample app"
+    domain = "https://rezerwacja-stolikow.com/"
+    audience = "rezerwacja-stolikow.com"
+    realm = "rezerwacja-stolikow.com"
+    secret = "do_not_tell_anyone"
 }
 database {
     driver = "org.h2.Driver"
